--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@ h2 {
     text-align: center;   
 }
 
-p  {
+div {
+	height: 100%;
+}
+
+p  {		
     color:black;
     font-family:courier;
     font-size:160%;
 }
+
 
 input {
     background-color:  #F8F8FF;
@@ -103,6 +108,8 @@ function checkTime(i) {
 </center>
 
 </div>
+
+<!-- CLIFTONS EXAM CLOCK UPDATED AND HOSTED BY JAKE -->
 
 </body>
 </html>
