--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          h2 {
          color:black;
          font-size:600%;
-         font-family:sans-serif;
+         font-family:Helvetica;
          text-align: center;   
          }
          p  {		
@@ -59,8 +59,7 @@
          border: 0px; /* Green border */
          color: white; /* White text */
          padding: 5px 5px; /* Some padding */
-         cursor: pointer; /* Pointer/hand icon */
-         width: 10%; /* Set a width if needed */
+         cursor: pointer; 
          margin-bottom: 0.1em;
          display: block; /* Make the buttons appear below each other */
          }
@@ -149,6 +148,7 @@
          }
          
       </script>
+	  <title>Cliftons Clock</title>
       <div>
          <img id="clif" src="cliftons_logo.jpg" alt="Logo" style="width:220px;height:95px">
       </div>
