--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          #input3 {
          background-color:  #F8F8FF;
          border: 0px solid;
-         color: red;
+         color: green;
          text-align: center;
          width: 100%;
          align: center;
