--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@
          </div>
       </center>
       </div>
-      <!-- CLIFTONS EXAM CLOCK CREATED AND HOSTED BY JAKE SMITH @ CLIFTONS BRISBANE -->
+      <!-- CLIFTONS EXAM CLOCK CREATED AND HOSTED BY JAKE SMITH @ CLIFTONS BRISBANE 
+	LinkedIn: linkedin.com/in/jakesmithqut/
+	-->
    </body>
 </html>
