Full implemented darkmode and text colour switching

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             document.getElementsByName("g1bl")[0].style.background = "Black";
             document.getElementsByName("g2bl")[0].style.background = "Black";
             document.getElementsByName("g3bl")[0].style.background = "Black";
-
+            // Input boxes
             document.getElementById("input1").style.color = '#3b5998';
             document.getElementById("input2").style.color = '#3b5998';
             document.getElementById("input3").style.color = 'green';
@@ -479,4 +479,4 @@
    <footer>
       <img type="button" src="sun.png" style="width:50px;height:35px" id="fixedbutton" class="btn btn-outline-light" onclick = "switchMode()" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1"></img>  
    </footer>
-</html>
+   </html>
